--- a/package.json
+++ b/package.json
@@ -9,33 +9,43 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@fullcalendar/daygrid": "^6.1.0",
+    "@fullcalendar/react": "^6.1.0",
+    "@fullcalendar/timegrid": "^6.1.0",
+    "bcryptjs": "^2.4.3",
+    "chart.js": "^4.4.0",
+    "d3": "^7.8.5",
+    "ioredis": "^5.3.2",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^8.0.0",
+    "next": "15.5.2",
+    "next-auth": "^4.24.0",
+    "nodemailer": "^6.9.0",
+    "pino": "^8.16.2",
+    "pino-pretty": "^10.2.3",
+    "pusher": "^5.2.0",
+    "pusher-js": "^8.4.0-rc2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.5.2",
-    "mongoose": "^8.0.0",
-    "next-auth": "^4.24.0",
-    "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.0",
+    "react-hot-toast": "^2.4.1",
     "socket.io": "^4.7.0",
-    "@fullcalendar/react": "^6.1.0",
-    "@fullcalendar/daygrid": "^6.1.0",
-    "@fullcalendar/timegrid": "^6.1.0",
-    "chart.js": "^4.4.0",
-    "nodemailer": "^6.9.0",
-    "tailwindcss": "^4.0.0"
+    "socket.io-client": "^4.7.0",
+    "tailwindcss": "^4.0.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@types/bcryptjs": "^2.4.6",
-    "@types/jsonwebtoken": "^9.0.0",
-    "@types/nodemailer": "^6.4.0",
+    "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/d3": "^7.4.3",
+    "@types/jsonwebtoken": "^9.0.0",
+    "@types/node": "^20",
+    "@types/nodemailer": "^6.4.0",
+    "@types/react": "^19.1.12",
+    "@types/react-dom": "^19.1.9",
     "eslint": "^9",
     "eslint-config-next": "15.5.2",
-    "@eslint/eslintrc": "^3"
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
