--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "bcryptjs": "^2.4.3",
     "chart.js": "^4.4.0",
     "d3": "^7.8.5",
+    "firebase": "^10.7.1",
+    "firebase-admin": "^12.0.0",
     "ioredis": "^5.3.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^8.0.0",
